﻿shmuel 21.05.2014 23:35:44 +0200 - build 3911

1. Продолжение 3896.

shmuel 21.05.2014 18:07:34 +0200 - build 3910

1. Продолжение 3896.

drkns 18.05.2014 17:19:57 +0200 - build 3909

1. Откат 3908.1 до лучших времён.

drkns 18.05.2014 16:22:09 +0200 - build 3908

1. Рефакторинг. Вынесем из macro.hpp всё, без чего там можно обойтись.

2. GCC warning.

shmuel 17.05.2014 23:58:06 +0200 - build 3907

1. Продолжение 3896.

drkns 17.05.2014 14:43:09 +0200 - build 3906

1. Падение при ввыборе черно-белой цветовой схемы.

zg 16.05.2014 14:27:13 +0200 - build 3905

1. после 3895 не работали клавиши выделения в комстроке.

drkns 15.05.2014 23:57:23 +0200 - build 3904

1. Поиcк теперь умеет сам решать, в какой кодировке надо искать текст. Слава роботам!

drkns 15.05.2014 01:45:08 +0200 - build 3903

1. Уточнение детектирования юникодного текста.

shmuel 15.05.2014 00:13:09 +0200 - build 3902

1. Продолжение 3896.

shmuel 14.05.2014 01:10:59 +0200 - build 3901

1. Уточнение 3896 (Фар падал при определённых обстоятельствах).

shmuel 13.05.2014 17:28:47 +0200 - build 3900

1. В 3896 сломалось возвращаемое значение Plugin.Call.

shmuel 13.05.2014 00:33:38 +0200 - build 3899

1. Продолжение 3896.

shmuel 12.05.2014 16:14:04 +0200 - build 3898

1. В 3896 сломалось возвращаемое значение Plugin.Menu.

zg 12.05.2014 13:39:44 +0200 - build 3897

1. 0002672: Неправильное поведение при работе с буфером обмена.
   при вставке пустой строки устанавливался признак наличия выделения, а само выделение - нет.

shmuel 12.05.2014 13:05:51 +0200 - build 3896

1. Рефакторинг в системе макросов.

zg 09.05.2014 00:19:23 +0200 - build 3895

1. рефакторинг ProcessKey.

svs 08.05.2014 20:34:04 +0400 - build 3894

1. Mantis#0002669: Гуид для меню с результатами поиска всех вхождений

    EditorFindAllListId         = {9BD3E306-EFB8-4113-8405-E7BADE8F0A59}  --> Menu.Id
    Редактор. Список всех найденных вхождений (F7 <All>).

w17 08.05.2014 16:17:06 +0400 - build 3893
